--- a/client/src/components/MiniMenu/MiniMenu.scss
+++ b/client/src/components/MiniMenu/MiniMenu.scss
@@ -40,7 +40,7 @@
     align-items: center;
     width: 80px;
     height: 80px;
-    background: #13E5C0;
+    background: #13e5c0;
     border-radius: 50%;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
     cursor: pointer;
